# doc-lisibility

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/docs_samples/raws/: doc3.docx  doc5.docx
documentation/: mkdocs.yml
documentation/docs/: index.md  usage.md
documentation/docs/api/: model.md  pipeline.md  scorer.md  segmentation.md
pipeline/: functions.py  script.py
research/: 01_limitations_ml_vision.ipynb  02_segmentation.ipynb  03_cnn_testing.ipynb  04_recurrentNetworks.ipynb  05_vggTuning.ipynb  06_scoring_documents.ipynb
research/data/docs_samples/raws/: doc1.docx  (+3 more)
research/models/: 00_models_resume.md  HybridNet0.pth  InceptionNet0.pth  baseline_cnn0.pth  gru_model0.pth  lstmAttn_model0.pth  lstm_model0.pth  resneXtlikeNet0.pth  resnetlikeNet0.pth  rnn_model0.pth  transformer0.pth  vgglikeNet0.pth
research/pytorch_testing/: 0approach_neural_networks.ipynb  activations.ipynb  layers.ipynb  loss_fcts.ipynb  vanishing_gradient.ipynb
research/runs/InceptionNetlike_train0/: events.out.tfevents.1754472684.vhop-ana-01.5708.6
research/runs/lstmAttn_squencerTrain0/: events.out.tfevents.1754484227.vhop-ana-01.2260.10
runs/HybridNetTrain0/: events.out.tfevents.1754486656.vhop-ana-01.2260.12
runs/baseline_train0/: events.out.tfevents.1754470257.vhop-ana-01.5708.1
runs/gru_squencerTrain0/: events.out.tfevents.1754482345.vhop-ana-01.2260.7
runs/lstm_squencerTrain0/: events.out.tfevents.1754483423.vhop-ana-01.2260.9
runs/resneXtlike_train0/: events.out.tfevents.1754472173.vhop-ana-01.5708.5
runs/transformer_fromscratch_train0_/: events.out.tfevents.1754487502.vhop-ana-01.2260.14
runs/vgglike_train0/: events.out.tfevents.1754470914.vhop-ana-01.5708.2
src/docReadibilityScorer_app/: _pipeline.py  model.py  scorer.py  segmentation.py  utils.py
src/doc_lisibility.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_modelLoad.py  test_pipeline.py  test_scorer.py  test_segmentation.py
(+2 files in other folders)
